# HPC-Lab-Docs

./: .gitignore  Makefile  README.md  deploy.sh  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: doc.yml
docs/: assignments.md  cluster.md  index.md  reference.md  toolchain.md  tools.md
docs/assignments/: 0.pow_a.md  1.mpi_async.md  2.mpi_allreduce.md  3.omp_schedule.md  4.cuda0.md  4.simd.md  5.profiling_tools.md  5.simd.md  5.tools.md  6.cuda0.md  6.cuda1.md  7.cuda1.md  7.optimization0.md  8.optimization0.md  8.profiling_tools.md
docs/exp/: 0.aplusb.md  0.pow_a.md  1.odd_even_sort.md  2.apsp.md  2.bfs.md  2.stencil.md  3.apsp.md  3.mssp.md  3.spmm.md  4.spmm.md
docs/exp/archive/: 2.stencil.md
docs/faq/: binding.md  index.md
pandoc/: docx.yml  pdf.yml  remove_duplicate_title.sh
theme-override/: main.html
